fix: stack view missaligned author avatar   (#3187)

--- a/src/components/NoteDialogComponents/NoteDialogNoteComponents/NoteDialogNoteFooter.scss
+++ b/src/components/NoteDialogComponents/NoteDialogNoteComponents/NoteDialogNoteFooter.scss
@@ -50,6 +50,7 @@
   height: var(--note-footer-height);
   width: var(--note-footer-height);
   padding: 0;
+  margin-bottom: 4px;
 
   #Circle-Background {
     stroke: none;
